# gui-rs

./: Cargo.toml  README.md  build.rs
shaders/: text_frag_shader.glsl  text_frag_shader_2.glsl  text_vert_shader.glsl  text_vert_shader_2.glsl  unlit_frag_shader.glsl  unlit_vert_shader.glsl  untextured_frag_shader.glsl  untextured_vert_shader.glsl
src/: color.rs  framebuffer.rs  gl_program.rs  gui.rs  lib.rs  mesh.rs  new_gl_program.rs  opengl.rs  renderer.rs  text.rs  texture.rs  util.rs  widgets.rs
